2003-05-20  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (showtokens)  Add support for the 
	VICTIM substitution.  Suggested by Cory Daehn.

	* lib/Mj/Resend.pm:  (post)  Bugfix:  Allow newlines
	when untainting moderation reasons.
	Supply a reason when an author's address is invalid.

2003-05-07  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_default)  Add error file support 
	for several messages.

2003-04-30  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Add support for the "recipients"
	access variable, which contains the number of e-mail addresses
	in the To and Cc headers of a posted message.

	* lib/Mj/Resend.pm:  (_r_ck_header)  Count the number of
	recipients in the To and Cc headers of a message.
	(_exclude)  Check all To and Cc headers.
	(_post)  Create exclusion list before the headers are munged.
	
2003-04-29  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_post)  Apply "From" header changes
	to the archived copy of a message.

2003-04-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (post)  Bugfix:  Untaint moderation
	reasons to avoid tainting bug in old versions of Perl.
	Thanks to John Levine.
	(_post)  Issue a warning if any of the access variables is
	tainted.
	(_check_header, et al.)  Avoid warnings for taboo code eval
	when no patterns are defined.

2003-04-19  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Resend.pm (post): Add some additional access variables to
	$any.

	* lib/Mj/Access.pm (_d_post): Add invalid_from as an access
	variable causing consultation by default.
	(list_access_check): Turn logging of access variables back on;
	it's too useful.

2003-04-17  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (_a_forward)  Use reply files
	to allow for language translation.

	* lib/Mj/Resend.pm:  (_post)  Bugfix:  Extract the
	author's address from the headers again when the
	message is archived; it may have been changed.
	Thanks to Brock Rozen.
